2022-11-26T16:23:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3554480358 # 264
* notice: last 14d: unq all: 1 22
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 100 263
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 101 264
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-26]

2022-11-26T01:24:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3551634126 # 262
* notice: last 14d: unq all: 1 21
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 99 262
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 100 263
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-25]

2022-11-25T01:36:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3544670435 # 259
* notice: last 14d: unq all: 1 20
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 99 261
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 99 262
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-24]

2022-11-24T08:22:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3538879481 # 257
* notice: last 14d: unq all: 1 19
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 98 260
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 99 261
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-24]

2022-11-23T16:25:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3533863845 # 255