@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-26T16:23:38Z",
-  "count_outdated" : 242,
-  "uniques_outdated" : 87,
+  "timestamp" : "2022-11-28T01:26:20Z",
+  "count_outdated" : 243,
+  "uniques_outdated" : 88,
   "count" : 264,
   "uniques" : 101,
   "clones" : [
-    {
-      "timestamp": "2022-11-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-14T00:00:00Z",
       "count": 1,
