@@ -1,3 +1,11 @@
+2022-11-28T01:26:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3560902344 # 268
+* notice: last 14d: unq all: 1 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 101 264
+* notice: next accum: outdated-unq outdated-all / unq all: 88 243 / 101 264
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-13] / []
+
 2022-11-26T16:23:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3554480358 # 264
 * notice: last 14d: unq all: 1 22
